tests/ui/traits/negative-impls/pin-unsound-issue-66544-clone.stderr
error[E0751]: found both positive and negative implementation of trait `Clone` for type `&mut MyType<'_>`:
  --> $DIR/pin-unsound-issue-66544-clone.rs:7:1
   |
LL | impl<'a> Clone for &'a mut MyType<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ positive implementation here
   |
   = note: negative implementation in crate `core`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0751`.
